# WebApp

1/: index.css  index.html  index.js
2/: Cargo.toml  Dockerfile
2/public/: images.html  images.js  index.html  index.js
2/src/: data.rs  main.rs  message.rs  mongo.rs  server.rs  session.rs
3/: index.css  index.js
