[package]
name = "website_project"
version = "0.1.0"
authors = ["Aursen <jeanno11@live.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-files = "0.5.0"
env_logger = "0"
actix-web-actors = "3.0.0"
serde_json = "1.0"
serde = "1"
mongodb = "1.2.0"
actix-multipart = "0.3.0"
futures = "0.3.1"
sanitize-filename = "0.3.0"
chrono = "0.4"
uuid = "0.8"